--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assistant-ui-starter",
+  "name": "penichat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,6 +25,7 @@
     "next": "15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.0"
